Bug 1682240 - Kill ntlm_auth process instead of waiting for it to complete r=necko-reviewers,kershaw

This avoids hangs when the process might be unresponsive.

Differential Revision: https://phabricator.services.mozilla.com/D116715